@startuml

skinparam classAttributeIconSize 0
skinparam shadowing false
hide circle

Interface Respuesta {}

class RespuestaUnica{
    +esIgualA(unaOpcion): unBoolean
    +getPuntaje():unPuntaje
}

class RespuestaEnLista{
    +contieneLoMismo(unaListaOpciones):Boolean
    +contieneAlguna(unaListaOpciones):Boolean
    +esIgual(unaListaOpciones):Boolean
    +calcularPuntaje():unPuntaje
}

class RespuestaDeGrupos{
    +grupoAContieneLoMismo(unaListaOpciones): Boolean
    +grupoBContieneLoMismo(unaListaOpciones): Boolean
}

abstract class Pregunta {
    -consigna
    {abstract}+evaluarRespuestaPara(unaRespuesta):unPuntaje
    {abstract}+getTipoPregunta():String
    {abstract}+guardar():JsonObject
}

class Kahoot {
    +agregarExclusividad(unaPreguntaSinPenalidad, unJugador)
    +agregarMultiplicadorX2(unaPreguntaConPenalidad, unJugador)
    +agregarMultiplicadorX3(unaPreguntaConPenalidad, unJugador)
    +evaluarRespuestas(unaPregunta)
    +getPuntajeJugador1()
    +getPuntajeJugador2()
}

class ListaDeOpciones {}

class Opcion {}

Respuesta <|.. RespuestaDeGrupos
Respuesta <|.. RespuestaEnLista
Respuesta <|.. RespuestaUnica

Pregunta ..> Respuesta
Kahoot --> Respuesta

RespuestaUnica --> "1" Opcion
RespuestaEnLista --> "1" ListaDeOpciones
RespuestaDeGrupos --> "2" ListaDeOpciones

Opcion "2..6" <- ListaDeOpciones

@enduml